add negative tests to LoginTest (incorrect credentials)